--- a/project/shopping_cart.html
+++ b/project/shopping_cart.html
@@ -61,7 +61,7 @@
                                 </table>
                                 <div class="my-acc-menu__price">
                                     <p class="my-acc-menu__price-text">TOTAL</p>
-                                    <p class="my-acc-menu__price-text" id="my-acc-menu-price">$500.00</p>
+                                    <p class="my-acc-menu__price-text" id="my-acc-menu-price">0</p>
                                 </div>
                                 <a class="my-acc-menu__button" href="checkout.html">Checkout</a>
                                 <a class="my-acc-menu__button" href="shopping_cart.html">Go&nbsp;to&nbsp;cart</a>
@@ -77,7 +77,7 @@
                         <a class="main-nav__link main-nav__link_active" href="index.html">Home</a>
                     </li>
                     <li class="main-nav__item">
-                        <a class="main-nav__link" href="product.html">Man</a>
+                        <a class="main-nav__link" href="product.html#1">Man</a>
                     </li>
                     <li class="main-nav__item">
                         <a class="main-nav__link mega-menu-yes" href="#">Women</a>
